test/spec_vectors/align/ok/module_16.wat
(module (memory 0) (func (i32.store align=4 (i32.const 0) (i32.const 1))))