test/spec_vectors/align/fail/module_105.wat
(module (memory 0) (func (f64.store align=16 (i32.const 0) (f64.const 0))))